j-ledger-core/.k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jledger-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
    - host: admin.j-ledger.local
      http:
        paths:
          - path: /api/core
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /api
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin-api
                port:
                  number: 3001
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin-web
                port:
                  number: 3000
    - host: wallet.j-ledger.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: wallet-api
                port:
                  number: 3002
